corpus/string.txt
================================================================================
string
================================================================================

"abcdef"

--------------------------------------------------------------------------------

(source_code
  (string_expression (string_fragment)))

================================================================================
shebang
================================================================================

''
  #!/usr/bin/env bash
  echo hello
''

--------------------------------------------------------------------------------

(source_code
  (indented_string_expression
    (shebang)
    (string_fragment)))

================================================================================
string (complex)
================================================================================

"
${bob} likes crisp $ bills. escape newline \
\${don't interpolate here!}"

--------------------------------------------------------------------------------

(source_code
  (string_expression
    (string_fragment)
    (interpolation
      (variable_expression (identifier)))
    (string_fragment)
    (escape_sequence)
    (dollar_escape)
    (string_fragment)
    (string_fragment)))

================================================================================
indented string
================================================================================

''
abc
def
ghi
''

--------------------------------------------------------------------------------

(source_code
  (indented_string_expression (string_fragment)))

================================================================================
indented string (complex)
================================================================================

''
This is just a couple of quotes: '''
A lone $ doesn't throw things off.
And of course, ''\${this shouldn't be an interpolation}.
But ${this} is.
This works, too:  ''$
''

--------------------------------------------------------------------------------

(source_code
  (indented_string_expression
    (string_fragment)
    (escape_sequence)
    (string_fragment)
    (dollar_escape)
    (string_fragment)
    (string_fragment)
    (interpolation
      (variable_expression (identifier)))
    (string_fragment)
    (dollar_escape)
    (string_fragment)))

================================================================================
string ($)
================================================================================

[
    "$"
    "$\n"
    "${x}"
    "$${x}"
    "$$${x}"
    "$$$${x}"
]

--------------------------------------------------------------------------------

(source_code
  (list_expression
    (string_expression (string_fragment))
    (string_expression
      (string_fragment)
      (escape_sequence))
    (string_expression
      (interpolation
        (variable_expression (identifier))))
    (string_expression (string_fragment))
    (string_expression
      (string_fragment)
      (interpolation
        (variable_expression (identifier))))
    (string_expression (string_fragment))))

================================================================================
indented string ($)
================================================================================

[
    ''$''
    ''$''\n''
    ''${x}''
    ''$${x}''
    ''$$${x}''
    ''$$$${x}''
]

--------------------------------------------------------------------------------

(source_code
  (list_expression
    (indented_string_expression (string_fragment))
    (indented_string_expression
      (string_fragment)
      (escape_sequence))
    (indented_string_expression
      (interpolation
        (variable_expression (identifier))))
    (indented_string_expression (string_fragment))
    (indented_string_expression
      (string_fragment)
      (interpolation
        (variable_expression (identifier))))
    (indented_string_expression (string_fragment))))

================================================================================
unterminated string
================================================================================

"foo ${bar} \n

--------------------------------------------------------------------------------

(source_code
  (string_expression
    (string_fragment)
    (interpolation
      (variable_expression (identifier)))
    (string_fragment)
    (escape_sequence)
    (MISSING """)))

================================================================================
unterminated string escape
================================================================================

"foo ${bar} \n \
--------------------------------------------------------------------------------

(source_code
  (ERROR
    (string_fragment)
    (interpolation
      (variable_expression (identifier)))
    (string_fragment)
    (escape_sequence)
    (string_fragment)
    (UNEXPECTED '\0')))
